Issue #27981: Fix refleak in fp_setreadl()

Patch by David Dudson.